fixing data truncation
Signed-off-by: Xavier <Xavier.owens0@gmail.com>

--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -14,6 +14,9 @@
   </tr>
   
 {% for happyPlace in happyPlaces %}
+	{% if happyPlace.active %}
+		
+	{% endif %}
   <tr>
     <td>{{ happyPlace.name }}</td>
     <td>{{ happyPlace.address }}</td>
