--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -1,5 +1,33 @@
 {% load filters %}
+{% load staticfiles %}
 
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
+
+<head>
+    <title>Expand table rows with jQuery - jExpand plugin - JankoAtWarpSpeed demos</title>
+    <style type="text/css">
+        
+    </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">  
+        $(document).ready(function(){
+            $("#report tr:odd").addClass("odd");
+            $("#report tr:not(.odd)").hide();
+            $("#report tr:first-child").show();
+            
+            $("#report tr.odd").click(function(){
+                $(this).next("tr").toggle();
+                $(this).find(".arrow").toggleClass("up");
+            });
+            //$("#report").jExpand();
+        });
+    </script> 
+</head>
+
+<body>
+<!--
 <table border="1">
 <tr>
     <th>Name</th>
@@ -28,16 +56,52 @@
     <td>{{ happyPlace.days }}</td>
     <td>{{ happyPlace.start }}</td>
     <td>{{ happyPlace.end }}</td>
-    <td><a href="{{ happyPlace.site }}"> {{ happyPlace.site|stripHttp }} </a></td>
+    <td><a href="{{ happyPlace.site }}"> {{ happyPlace.site|beautifyUrl }} </a></td>
     <td>{{ happyPlace.neighborhood }}</td>
     <td>{{ happyPlace.phone }}</td>
   </tr>
 {% endfor %} 
 
+-->
 
 </table>
 
 
+ <table id="report">
+        <tr>
+            <th>Name</th>
+    		<th>Address</th>
+    		<th>Cross Street</th>
+    		<th>City</th>
+    		<th>Neighborhood</th>
+            <th></th>
+        </tr>
+        {% for happyPlace in happyPlaces %}
+        {% if happyPlace.active %}
+		
+		{% endif %}
+        <tr>
+            <td>{{ happyPlace.name }} </a></td>
+            <td>{{ happyPlace.address }}</td>
+            <td>{{ happyPlace.cross }}</td>
+            <td>{{ happyPlace.city }}</td>
+            <td>{{ happyPlace.neighborhood }}</td>
+            <td><div class="arrow"></div></td>
+        </tr>
+        <tr>
+            <td colspan="6">
+                <h4>Additional information</h4>
+                <ul>
+                    <li>{{ happyPlace.days }}  {{ happyPlace.start }} - {{ happyPlace.end }}</li>
+                    <li>{{ happyPlace.notes }}</li>
+                    <li>{{ happyPlace.phone }}</li>
+                    <li><a href="{{ happyPlace.site }}"> {{ happyPlace.site|beautifyUrl }} </a></li>
+                 </ul>   
+            </td>
+        </tr>
+       {% endfor %} 
+    </table>
 
 <a href="submit"> Click here to add a new HappyPlace! </a>
-
+</body>
+</html>
