--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -1,19 +1,21 @@
 {% load filters %}
 {% load staticfiles %}
-
+    				
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
 
 <head>
-    <title>Expand table rows with jQuery - jExpand plugin - JankoAtWarpSpeed demos</title>
-    <style type="text/css">
-        
-    </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+    
     <script type="text/javascript">  
+    
+    
+    	
         $(document).ready(function(){
             $("#report tr:odd").addClass("odd");
+            $("#report tr:even").addClass("hidden");
             $("#report tr:not(.odd)").hide();
             $("#report tr:first-child").show();
             
@@ -21,7 +23,7 @@
                 $(this).next("tr").toggle();
                 $(this).find(".arrow").toggleClass("up");
             });
-            //$("#report").jExpand();
+            
         });
     </script> 
 </head>
@@ -62,18 +64,17 @@
   </tr>
 {% endfor %} 
 
--->
 
 </table>
 
-
+-->
+<div id = "tableContainer" cellspacing='0' >
  <table id="report">
         <tr>
             <th>Name</th>
-    		<th>Address</th>
-    		<th>Cross Street</th>
-    		<th>City</th>
     		<th>Neighborhood</th>
+    		<th>Days</th>
+    		<th>The Happy Hours</th>
             <th></th>
         </tr>
         {% for happyPlace in happyPlaces %}
@@ -82,26 +83,28 @@
 		{% endif %}
         <tr>
             <td>{{ happyPlace.name }} </a></td>
-            <td>{{ happyPlace.address }}</td>
-            <td>{{ happyPlace.cross }}</td>
-            <td>{{ happyPlace.city }}</td>
             <td>{{ happyPlace.neighborhood }}</td>
+            <td>{{ happyPlace.days|beautifyDays }}</td>
+            <td>{{ happyPlace.start }} - {{ happyPlace.end }}</td>
             <td><div class="arrow"></div></td>
         </tr>
         <tr>
-            <td colspan="6">
-                <h4>Additional information</h4>
-                <ul>
-                    <li>{{ happyPlace.days }}  {{ happyPlace.start }} - {{ happyPlace.end }}</li>
-                    <li>{{ happyPlace.notes }}</li>
-                    <li>{{ happyPlace.phone }}</li>
-                    <li><a href="{{ happyPlace.site }}"> {{ happyPlace.site|beautifyUrl }} </a></li>
-                 </ul>   
+            <td colspan="2">
+                {{ happyPlace.days|beautifyDays }}</br>
+                {{ happyPlace.start }} - {{ happyPlace.end }}</br>
+            </td><td colspan="1">
+                {{ happyPlace.notes }}
+            </td>
+            <td colspan="3">
+               	{{ happyPlace.address }}</br>
+                <a href="https://www.google.com/maps/dir//40.739422,-74.002097/@40.739422,-74.002097,17z"> Get Directions </a></br></br>
+               	{{ happyPlace.phone }}</br>
+               	<a href="{{ happyPlace.site }}"> {{ happyPlace.site|beautifyUrl }} </a>
             </td>
         </tr>
        {% endfor %} 
     </table>
-
+</div>
 <a href="submit"> Click here to add a new HappyPlace! </a>
 </body>
 </html>
