--- a/HappyPlace/src/HappyPlace/site/static/main.css
+++ b/HappyPlace/src/HappyPlace/site/static/main.css
@@ -97,6 +97,8 @@ table td:first-child {
 	border-left: 0;
 }
 table td {
+	font-size: 15px;
+	width: 14%;
 	padding:18px;
 	border-top: 1px solid #ffffff;
 	border-bottom:1px solid #e0e0e0;
@@ -105,6 +107,9 @@ table td {
 	background: #aaa;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
 	background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
+}
+table td.dayOfWeek {
+	text-align: left;	
 }
 table tr.hidden td {
 	background: rgba(169, 138, 15, 0.21);
