--- a/HappyPlace/src/HappyPlace/site/templates/submit.html
+++ b/HappyPlace/src/HappyPlace/site/templates/submit.html
@@ -1,29 +1,34 @@
 <b><i>Happy Place Form</i></b>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   
- <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
- 
-{#<script>#}
-{#function popUp() {#}
-{#	alert("s");#}
-{#	$("form#happyHourForm").submit();#}
-{#	alert("s");#}
-{#    $( "#dialog-message" ).dialog({#}
-{#      modal: true,#}
-{#      buttons: {#}
-{#        "Add More": function() {#}
-{#          $( this ).dialog( "close" );#}
-{#          window.location.href = "page.html";#}
-{#        },#}
-{#        Home: function() {#}
-{#          $( this ).dialog( "close" );#}
-{#          window.location.href = "/";#}
-{#        }#}
-{#      }#}
-{#    });#}
-{#  }#}
-{#</script>#}
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script type="text/javascript">
+	$(document).ready(function(){
+       	 $("input#allDay").change(function(){
+       	 	if($(this).prop('checked')){       	 		
+       	 		$("input#id_start").attr('disabled', true);
+       	 		$("input#id_end").attr('disabled', true);
+       	 	} else {
+       	 		$("input#id_start").val("");
+       	 		$("input#id_end").val("");
+       	 		
+       	 		$("input#id_start").attr('disabled', false);
+       	 		$("input#id_end").attr('disabled', false);
+       	 	}
+       	 });
+     });
+     
+     function onHappyHourSubmit(){
+     	$("input#id_start").attr('disabled', false);
+       	$("input#id_end").attr('disabled', false);  
+       	
+     	if($("input#allDay").prop('checked')){
+       	 	$("input#id_start").val("00:00:00");
+       	 	$("input#id_end").val("00:00:00");
+       	}
+     }
+</script>
 
 <form id="happyHourForm" enctype="multipart/form-data" action="/submitHappyPlace/" method="post">
   	{% csrf_token %}
@@ -36,9 +41,9 @@
 <form enctype="multipart/form-data" action="/submitHappyHour/" method="post">
   	{% csrf_token %}
   	
+    <label for="allDay"><input id="allDay" name="allDay" type="checkbox"> All Day</label>
     {{ happyHourForm.as_p }}
-    
-    <input type="submit" value="Submit">
+    <input onClick="onHappyHourSubmit()" type="submit" value="Submit">
 </form>
 
 {#<div id="dialog-message" title="Basic dialog">#}
