--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -6,27 +6,27 @@
 <link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
 
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
-    
-    <script type="text/javascript">  
-        $(document).ready(function(){
-			$('#submit').attr('disabled', true);
-            $("#report tr:odd").addClass("odd");
-            $("#report tr:even").addClass("hidden");
-            $("#report tr:not(.odd)").hide();
-            $("#report tr:first-child").show();
-            
-            $("#report tr.odd").click(function(){
-                $(this).next("tr").toggle();
-                $(this).find(".arrow").toggleClass("up");
-            });
-            	
-            $("select#city").change(function() {
-				if ($(this).val() == 'Z') {
-					$("select#neighborhood").html("<option>Select a model</option>");
-					$("select#neighborhood").attr('disabled', true);
-				} else {
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+   
+<script type="text/javascript">
+	$(document).ready(function(){
+		$('#submit').attr('disabled', true);
+           $("#report tr:odd").addClass("odd");
+           $("#report tr:even").addClass("hidden");
+           $("#report tr:not(.odd)").hide();
+           $("#report tr:first-child").show();
+           
+           $("#report tr.odd").click(function(){
+               $(this).next("tr").toggle();
+               $(this).find(".arrow").toggleClass("up");
+           });
+           	
+           $("select#city").change(function() {
+			if ($(this).val() == 'Z') {
+				$("select#neighborhood").html("<option>Select a Neighborhood</option>");
+				$("select#neighborhood").attr('disabled', true);
+			} else {
 					var url = "/getNeighborhoods/" + $(this).val();
 					$.getJSON(url, function(data) {
 						var options = '<option value="all">All Neighborhoods</option>';
@@ -42,8 +42,11 @@
 				}
        	 	});
        	 });
-
-	</script>
+       	 
+       	 function clearFilters(){
+			$("select#city option:first").attr('selected', 'selected');
+       	 }
+</script>
 </head>
 
 <form enctype="multipart/form-data" action="/" method="post" style="text-align: center;">
@@ -61,6 +64,7 @@
 	</select>
 	
 	<input id="submit" type="submit" value="Submit">
+	<input id="clear" type ="submit" value="All" onClick="clearFilters()"> 
 </form>
 
 <body>
