--- a/HappyPlace/src/HappyPlace/site/static/main.css
+++ b/HappyPlace/src/HappyPlace/site/static/main.css
@@ -1,6 +1,7 @@
  body { 
- background-image: url('./cityscape-802041_960_720.jpg');
- font-family:Tahoma, Geneva, sans-serif; font-size:1em;
+ background-image: url('./default.png');
+ font-family:Tahoma, Geneva, sans-serif;
+ font-size:1em;
  background-repeat: no-repeat;
  background-size: cover;
  }
@@ -22,17 +23,32 @@
         #report tr.odd td { background:#aaa  repeat-x scroll center left; cursor:pointer;  }
        */
 
-#banner {
-	margin-left:10%;
-	margin-right:10%;
-	width:80%;
-	text-align: center;
-	color:#B59B31;
-	font-size: 60px;
-}
-
 #report div.arrow { background:transparent url('./arrows.png') no-repeat scroll 0px -16px; width:16px; height:16px; display:block;}
 #report div.up { background-position:0px 0px;}
+
+#selectForm select {
+    width: 30%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #D2C17D;
+    font-family: Tahoma, Geneva, sans-serif;
+ 	font-size:1em;
+	font-variant: small-caps;
+}
+
+div.selectFormRow {
+	width: 80%;
+	margin: auto;
+}
+
+#selectForm input[type=submit] {
+    font-family: Tahoma, Geneva, sans-serif;
+ 	font-size:1em;
+	font-variant: small-caps;
+    padding: 8px 25px;
+    font-weight: bold;
+}
 
 table a:link {
 	color: #bd5a35;
@@ -59,7 +75,8 @@ table {
 	border-collapse:collapse;
 	margin:10%;
 	width:80%;
-
+	opacity: 0.89;
+	
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 	border-radius:3px;
