Signed-off-by: Xavier <Xavier.owens0@gmail.com>

--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -163,6 +163,6 @@
 </br>
 </br>
 </br>
-<a href="https://drive.google.com/folderview?id=0B1_AzQ7O1inTRGxmS2JNcFYtLU0&usp=sharing"> Submit A Photo </a>
+<a href="https://script.google.com/macros/s/AKfycbxY09aDQbhBdA7t_mB4H4abe_bMMlketJvxwlp8l2A0B_TcDjwN/exec">ADD A PHOPTO</a>
 </body>
 </html>
