Signed-off-by: Xavier <Xavier.owens0@gmail.com>

--- a/HappyPlace/src/HappyPlace/site/static/main.css
+++ b/HappyPlace/src/HappyPlace/site/static/main.css
@@ -1,7 +1,10 @@
  body { 
  background-image: url('./default.png');
  font-family:Tahoma, Geneva, sans-serif;
- font-size:1em;
+ font-variant: small-caps;
+ color: #B59B31;
+ font-weight: bold;
+ font-size: 1em;
  background-repeat: no-repeat;
  background-size: cover;
  }
