Signed-off-by: Xavier <Xavier.owens0@gmail.com>

--- a/HappyPlace/src/HappyPlace/site/templates/home.html
+++ b/HappyPlace/src/HappyPlace/site/templates/home.html
@@ -71,7 +71,7 @@
 	
 	<div class="selectFormRow">
 		<select name="city" id="city">
-			<option value="defaultCity">Select A City</option>
+			<option value="defaultCity">All Cities</option>
 			{% for city in cities %}
 				<option value="{{ city }}">{{ city }}</option>
 			{% endfor %}
